[package]
name = "rgbl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"
env_logger = "0.9"
imgui = "0.7"
imgui-wgpu = "0.16"
imgui-winit-support = { version = "0.7.1", default-features = false, features = ["winit-25"] }
log = "0.4"
pixels = "0.5.0"
winit = "0.25"
winit_input_helper = "0.10"